<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@color/auth_background">


    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/sign_up"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginStart="25dp"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/firstName"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:inputType="text"
            android:hint="@string/first_name"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_colour"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.48"
            />
        <EditText
            android:id="@+id/lastName"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:inputType="text"
            android:hint="@string/last_name"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_colour"
            android:background="@drawable/rounded_edittext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/firstName"
            app:layout_constraintTop_toTopOf="@+id/firstName"
            app:layout_constraintWidth_percent="0.48"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_colour"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="240dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_colour"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="330dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_colour"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="420dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />

    <CheckBox
        android:id="@+id/signupCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="490dp"
        />

    <Button
        android:id="@+id/signupBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="550dp"
        android:backgroundTint="@color/button_color"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="70dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="49sp"
            android:gravity="center"
            android:text="@string/signup_question"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            />
        <TextView
            android:id="@+id/linkLogin"
            android:layout_width="wrap_content"
            android:layout_height="49sp"
            android:gravity="center"
            android:text="@string/login_text"
            android:textColor="@color/danger"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>