<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/auth_background">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/login_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="80dp"
        android:layout_marginStart="25dp"
        android:textSize="34sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_colour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="140dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
         />

    <EditText
        android:id="@+id/loginPass"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/hint_colour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="240dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_checkbox"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="310dp"
        android:layout_marginStart="30dp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:textColor="@color/danger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="32dp"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/login_text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="380dp"
        android:backgroundTint="@color/button_color"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:enabled="true"
        />
    <ProgressBar
        android:id="@+id/progressLogin"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Or Sign in With"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="200dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="140dp"
        android:gravity="center"
        >
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:src="@drawable/google"
            android:contentDescription="@string/google_login"
            android:layout_marginEnd="16dp"
            />
        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:src="@drawable/facebook"
            android:contentDescription="@string/facebook_login"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="90dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48sp"
            android:gravity="center"
            android:text="Don't have an account?"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginEnd="10dp"
            />
        <TextView
            android:id="@+id/linkSignup"
            android:layout_width="wrap_content"
            android:layout_height="49sp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/danger"
            android:textSize="18sp"
            android:clickable="true"
            android:focusable="true"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>